[package]
name = "my_g102_cs_click"
version = "0.1.0"
edition = "2021"

[dependencies]
tray-icon = "0.11"
once_cell = "1"
base64 = "0.22"
image = "0.25"
winit = "0.28"

windows = { version = "0.62.1", features = [
    "Win32_Foundation",
    "Win32_UI_WindowsAndMessaging",
    "Win32_UI_Input_KeyboardAndMouse",
    "Win32_System_Threading",
    "Win32_Security"
] }

[profile.release]
panic = "abort"

[package.metadata.windows-subsystem]
windows = true